# securewealthTwin

./: .env.example  .gitignore  App.js  App.tsx  BACKEND_SETUP.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  QUICK_START.md  README.md  README_NATIVE_BUILD.md  SETUP_COMPLETE.md  app.html  app.json  dashboard.html  docker-compose.yml  eas.json  index.html  language.html  login.html  metro.config.js  mock-backend.js  package-lock.json  package.json  register.html  registration.html  server.js  welcome-new.html  welcome.html  yono-login.html  yono-register.html
backend/: .env.example  Dockerfile  README.md  alembic.ini  pom.xml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/ai_engine/: __init__.py  feedback_pipeline.py  model_service.py  preprocessor.py  scoring_engine.py
backend/app/auth/: jwt.py
backend/app/core/: config.py
backend/app/crypto/: aead.py  envelope.py  key_manager.py  nonce_store.py  pq.py  pq_compat.py  session_store.py
backend/app/db/: database.py  models.py
backend/app/middleware/: encryption.py
backend/app/routes/: fraud.py  secure.py
backend/app/schemas/: encryption.py
backend/docs/: BACKEND.md
backend/scripts/: create_tables.py  debug_client.py  deploy.ps1  generate_crypto_material.py  key_rotate.py  rotate_crypto_material.py  run_migrations.py
backend/tests/: test_key_manager_kms.py  test_replay_prevention.py  test_secure_encryption.py
client_sdk/native_android/: CMakeLists.txt  README.md  oqs_external.cmake
css/: psb-app.css
(+176 files in other folders)
